<resources>
    <string name="app_name">GoGoDoggo</string>
    <string name="sign_in">Sign In</string>string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="email">E-Mail Address</string>
    <string name="submit">Submit</string>
    <string name="title_activity_quiz">quiz</string>
    <string name="hu_activity">Human User Activity</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="color">Color</string>
    <string name="breed">Breed</string>
    <string name="submitdogprofile">submitdogprofile</string>
    <string name="dog_bio">Bio</string>
    <string name="dog_name">Name</string>
    <string name="size">Size</string>

    <string name="create_shelter_account">CREATE SHELTER ACCOUNT</string>
    <string name="enter_name_of_shelter">Enter Name of Shelter.</string>
    <string name="enter_address_of_the_shelter">Enter address of the shelter.</string>
    <string name="enter_email_address_of_the_shelter">Enter email address of the shelter.</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="enter_phone_number_of_the_shelter">Enter phone number of the shelter.</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_a_password">Enter a password.</string>
    <string name="shelterPassword">Password</string>
    <string name="Re_enter_password">Re-type password.</string>
    <string name="Re_enter_password_input">Password.</string>
    <string name="profile_description">profile_description</string>
    <string name="shelternameprofile">ShelterName</string>
    <string name="shelteremailaddressprofile">ShelterEmailAddress</string>
    <string name="shelterphoneprofile">ShelterPhone</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="view_existing_profiles">View Existing Profiles</string>
    <string name="toolbarlogo">toolBarLogo</string>
    <string name="profilepic">profilePic</string>
    <string name="title_activity_shelter_profile">ShelterProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dog_image">Image of the dog</string>
    <string name="match_me">Match Me</string>
    <string name="view_matches">View Matches</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ggd_logo" />

    <string-array name="dog_group_array">
        <item>Dog Group</item>
        <item>Sporting</item>
        <item>Hound</item>
        <item>Working</item>
        <item>Terrier</item>
        <item>Toy</item>
        <item>Non-Sporting</item>
        <item>Herding</item>
        <item>No Preference</item>
    </string-array>

    <string-array name="dog_size_array">
        <item>Dog Size</item>
        <item>Giant</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
        <item>Toy</item>
        <item>No Preference</item>
    </string-array>

    <string-array name="dog_gender_array">
        <item>Dog Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>No Preference</item>
    </string-array>

    <string-array name="dog_color_array">
        <item>Dog Color</item>
        <item>Tan</item>
        <item>Wheaten</item>
        <item>White</item>
        <item>Dark Brown</item>
        <item>Blue</item>
        <item>Light Silver</item>
        <item>Red</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Cream</item>
        <item>Rust</item>
        <item>Brown</item>
        <item>Apricot</item>
        <item>Fawn</item>
        <item>Chestnut</item>
        <item>Gray</item>
        <item>Beige</item>
        <item>Gold</item>
        <item>Dark Blue</item>
        <item>Lilac</item>
        <item>Orange</item>
        <item>Light Brown</item>
        <item>Yellow</item>
        <item>No Preference</item>
    </string-array>

    <string-array name="dog_age_array">
        <item>Dog Age</item>
        <item>Less Than 1 Year Old</item>
        <item>1 Years Old</item>
        <item>2 Years Old</item>
        <item>3 Years Old</item>
        <item>4 Years Old</item>
        <item>5 Years Old</item>
        <item>6 Years Old</item>
        <item>7 Years Old</item>
        <item>8 Years Old</item>
        <item>9 Years Old</item>
        <item>10 Years Old</item>
        <item>11 Years Old</item>
        <item>12 Years Old</item>
        <item>13 Years Old</item>
        <item>14 Years Old</item>
        <item>15+ Years Old</item>
        <item>No Preference</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user">Hello User!</string>
    <string name="title_activity_maps">ViewMapPage</string>
    <string name="permission_required_toast">Please</string>
    <string name="permission_rationale_location">Because</string>
    <string name="location_permission_denied">Denied.</string>
    <string name="view_map">View Map</string>
    <string name="hello_shelter">Hello Shelter!</string>
    <string name="title_activity_view_existing_shelter_dogs">ViewExistingShelterDogs</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
