<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#131313">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/toolbarlogo"
                android:src="@drawable/newlogo" />
        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:src="@drawable/newdogtransparent"
            android:contentDescription="@string/profilepic"/>


        <TextView
            android:id="@+id/shelterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/shelternameprofile"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />


        <TextView
            android:id="@+id/shelterEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/shelteremailaddressprofile"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />


        <TextView
            android:id="@+id/shelterPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/shelterphoneprofile"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />


        <Button
            android:id="@+id/createProfileButton"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:background="#FFF81F"
            android:fontFamily="sans-serif-black"
            android:text="@string/create_new_profile"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/viewProfileButton"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="#FFF81F"
            android:fontFamily="sans-serif-black"
            android:text="@string/view_existing_profiles"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>